tools/node/tests/snapshots/versions_test__node_tool__unpin_version__doesnt_remove_if_not_matching.snap
---
source: tools/node/tests/versions_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"package.json\")).unwrap()"
---
{
  "devEngines": {
    "runtime": {
      "name": "bun",
      "version": "^1"
    }
  }
}
